ansible/roles/k8s_manifests/files/app-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-booking
---
# POSTGRES
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-postgres
  namespace: hotel-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-postgres
  template:
    metadata:
      labels:
        app: hotel-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-postgres
  namespace: hotel-booking
spec:
  selector:
    app: hotel-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# SPRING BACKEND
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend
  namespace: hotel-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-backend
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: backend
          image: ampor/hotel-booking-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend
  namespace: hotel-booking
spec:
  selector:
    app: spring-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# REACT FRONTEND
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: hotel-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: frontend
          image: alexkgm/hotel-booking:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: hotel-booking
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
# INGRESS (Traefik is pre-installed on K3s)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-booking-ingress
  namespace: hotel-booking
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hotel-booking.molika.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend
                port:
                  number: 80
